updated service controller classes
